<resources>
    <string name="app_name">MarvelHeroes</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for a Character!</string>

    <!-->Loading Dialog<-->
    <string name="loading">Carregando</string>
    <string name="wait_while_loading">Please wait while the characters are loaded…</string>

    <!-->Character Details<-->
    <string name="char_details">Character Details:</string>
    <string name="char_name">Name:</string>
    <string name="char_comics">Comics:</string>
    <string name="char_stories">Stories:</string>
    <string name="char_events">Events:</string>
    <string name="char_series">Series:</string>
    <string name="character_details_not_found">Character details not found!</string>
    <string name="nothing_found">No info.</string>


</resources>
