<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
    android:visibility="visible"
    tools:context="com.example.isaqu.marvelheroes.view.CharacterDetailsFragment">

    <TextView
        android:id="@+id/movie_details_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:text="@string/character_details_not_found"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/details_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:id="@+id/title_details"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:text="@string/char_details"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/name_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/char_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="Nome do Personagem" />
        </LinearLayout>

        <TextView
            android:id="@+id/movieID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/release_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/title_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/char_details"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:text="Lorem ipsum" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_comics"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:text="@string/char_comics"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/value_comics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            tools:text="Comics List" />

        <TextView
            android:id="@+id/title_stories"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:text="@string/char_stories"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/value_stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            tools:text="Stories List" />

        <TextView
            android:id="@+id/title_events"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:text="@string/char_events"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/value_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white"
            tools:text="Events List" />

        <TextView
            android:id="@+id/title_series"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:text="@string/char_series"
            android:textColor="@android:color/holo_orange_light"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/value_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@android:color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

</RelativeLayout>